--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -3,14 +3,14 @@
 	"short_name":"PWA",
 	"start_url":"index.html",
 	"display":"standalone",
-	"background_color":"#5900b3",
+	"background_color":"white",
 	"theme_color":"black",
 	"scope": ".",
 	"description":"This is a PWA tutorial.",
 	"icons":[
 	{
-	"src":"images/icon-142x142.png",					
-	"sizes":"142x142",
+	"src":"images/icon-150x150.png",					
+	"sizes":"150x150",
 	"type":"image/png"
 	},
 	{
